unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/pse__Hours_to_Days_Rule__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__HoursToDaysRuleHelp</customHelpPage>
    <description>If using daily billing rates, determines how many hours count as a day or any specified partial day amount in billing or cost calculations. You can apply an hours to days rule to a project and an assignment using the Hours to Days  field.</description>
    <label>Hours to Days Rule</label>
    <nameField>
        <label>Hours to Days Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hours to Days Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>