unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/fields/pse__Custom_Plugin_Namespace__c.field-meta.xml
<CustomField>
    <fullName>pse__Custom_Plugin_Namespace__c</fullName>
    <label>Custom Plugin Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>