unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/fields/pse__Days_Value_10__c.field-meta.xml
<CustomField>
    <fullName>pse__Days_Value_10__c</fullName>
    <description>Number of days to apply for hours less than or equal to Hour Threshold 10</description>
    <inlineHelpText>Number of days to apply for hours less than or equal to Hour Threshold 10</inlineHelpText>
    <label>Days Value 10</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>