unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/fields/pse__Hour_Threshold_10__c.field-meta.xml
<CustomField>
    <fullName>pse__Hour_Threshold_10__c</fullName>
    <description>if non-null, any number of hours less than or equal to this gets Days Value 10.</description>
    <inlineHelpText>if non-null, any number of hours less than or equal to this gets Days Value 10.</inlineHelpText>
    <label>Hour Threshold 10</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>