unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/fields/pse__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This rule will be used if no rule is specified on Project or Assignment.</description>
    <inlineHelpText>This rule will be used if no rule is specified on Project or Assignment.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>