unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/fields/pse__Maximum_Days_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Maximum_Days_Value__c</fullName>
    <description>any number of hours greater than the highest non-null Hour Threshold field value gets this Days value (if all thresholds are null, then this value applies regardless of number of hours).</description>
    <label>Maximum Days Value</label>
    <precision>8</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>