unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/fields/pse__Per_Increment_11__c.field-meta.xml
<CustomField>
    <fullName>pse__Per_Increment_11__c</fullName>
    <inlineHelpText>The number of hourly increments to divide timecard hours by when determining a day's value. The value is a percentage of an hour. For example, 0.5 is 30 minutes.</inlineHelpText>
    <label>Per Increment 11</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>