unpackaged/main/default/objects/pse__Hours_to_Days_Rule__c/validationRules/pse__Hour_Threshold_Required_for_Days_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Hour_Threshold_Required_for_Days_Value</fullName>
    <active>true</active>
    <description>Hour Threshold is required if Days Value is specified.</description>
    <errorConditionFormula>OR
(
AND(NOT(ISNULL(pse__Days_Value_1__c)),ISNULL(pse__Hour_Threshold_1__c)),
AND(NOT(ISNULL(pse__Days_Value_2__c)),ISNULL(pse__Hour_Threshold_2__c)),
AND(NOT(ISNULL(pse__Days_Value_3__c)),ISNULL(pse__Hour_Threshold_3__c)),
AND(NOT(ISNULL(pse__Days_Value_4__c)),ISNULL(pse__Hour_Threshold_4__c)),
AND(NOT(ISNULL(pse__Days_Value_5__c)),ISNULL(pse__Hour_Threshold_5__c)),
AND(NOT(ISNULL(pse__Days_Value_6__c)),ISNULL(pse__Hour_Threshold_6__c)),
AND(NOT(ISNULL(pse__Days_Value_7__c)),ISNULL(pse__Hour_Threshold_7__c)),
AND(NOT(ISNULL(pse__Days_Value_8__c)),ISNULL(pse__Hour_Threshold_8__c)),
AND(NOT(ISNULL(pse__Days_Value_9__c)),ISNULL(pse__Hour_Threshold_9__c)),
AND(NOT(ISNULL(pse__Days_Value_10__c)),ISNULL(pse__Hour_Threshold_10__c)),
AND(NOT(ISNULL(pse__Days_Value_11__c)),ISNULL(pse__Hour_Threshold_11__c)),
AND(NOT(ISNULL(pse__Days_Value_12__c)),ISNULL(pse__Hour_Threshold_12__c)),
AND(NOT(ISNULL(pse__Days_Value_13__c)),ISNULL(pse__Hour_Threshold_13__c)),
AND(NOT(ISNULL(pse__Days_Value_14__c)),ISNULL(pse__Hour_Threshold_14__c)),
AND(NOT(ISNULL(pse__Days_Value_15__c)),ISNULL(pse__Hour_Threshold_15__c)),
AND(NOT(ISNULL(pse__Days_Value_16__c)),ISNULL(pse__Hour_Threshold_16__c)),
AND(NOT(ISNULL(pse__Days_Value_17__c)),ISNULL(pse__Hour_Threshold_17__c)),
AND(NOT(ISNULL(pse__Days_Value_18__c)),ISNULL(pse__Hour_Threshold_18__c)),
AND(NOT(ISNULL(pse__Days_Value_19__c)),ISNULL(pse__Hour_Threshold_19__c)),
AND(NOT(ISNULL(pse__Days_Value_20__c)),ISNULL(pse__Hour_Threshold_20__c))
)</errorConditionFormula>
    <errorMessage>Hour Threshold is required if Days Value is specified.</errorMessage>
</ValidationRule>